Add likely.js buttons.

--- a/template.html
+++ b/template.html
@@ -28,11 +28,19 @@
 		width: 7%;
 	}
   </style>
+  <script src="likely.js"></script>
+  <link rel="stylesheet" href="likely.css">
 </head>
 
 <body>
 	<header><h1>Open Source Text Games</h1></header>
-
+	<p>
+		<div class="likely">
+		  <div class="twitter">Twitter</div>
+		  <div class="facebook">Facebook</div>
+		  <div class="gplus">Google Plus</div>
+		</div>
+	</p>
   <article>
     <p>
 	This site tries to gather of great old text mode games in one place. If
@@ -51,7 +59,6 @@
       Type "play" to find all games available on remote servers via telnet or ssh.
       Type "screencast" to find all games with recorded screencasts.
     </p>
-
 <div>
 	<input id="filter" type="text" placeholder="Type to filter by name or information">
 </div>
