Add link to the OSGC

--- a/template.html
+++ b/template.html
@@ -49,9 +49,8 @@
 	issue or even a pull request!
     </p>
     <p>
-      Similar resources: check
-      out <a href="https://ttygames.wordpress.com/">TTY Games</a>, which
-      specializes on games in text mode, and <a href="http://www.lgdb.org/category/game_graphic/text_console">Linux Game Database</a>, contains a list of ASCII games.
+      <b>Similar resources:</b> check out <a href="https://ttygames.wordpress.com/">TTY Games</a>, which
+      specializes on games in text mode, <a href="http://www.lgdb.org/category/game_graphic/text_console">Linux Game Database</a>, contains a list of ASCII games, and <a href="http://osgameclones.com/">Open Source Game Clones</a>.
     </p>
   </article>
 
