[SEO mumbo-jumbo]: Use nofollow links for the external links

--- a/template.html
+++ b/template.html
@@ -67,7 +67,7 @@
 <dl>
 	{{range .}}
 	<dt id="{{.Name}}" class="searchable">
-		<a href="{{.URL}}">{{.Name}}</a>
+		<a href="{{.URL}}" rel="nofollow">{{.Name}}</a>
 		<a href="#{{.Name}}" class="hash">#</a>
 	</dt>
 
