--- a/template.html
+++ b/template.html
@@ -55,7 +55,7 @@
   </article>
 
     <p>
-      Type "play" to find all games available on remote servers via telnet or ssh.
+      Type "play" to find all games available on remote servers via telnet or ssh and run it via <a href="https://tools.bartlweb.net/webssh/">webssh</a>.
       Type "screencast" to find all games with recorded screencasts.
     </p>
 <div>
